--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "main": "pathToMain",
     "dependencies": {
         "express": "^4.17.1",
-        "express-handlebars": "^3.1.0"
+        "express-handlebars": "^3.1.0",
+        "uuid": "^8.1.0"
     },
     "devDependencies": {
         "nodemon": "^1.19.2"
