--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "dependencies": {
         "express": "^4.17.1",
         "express-handlebars": "^3.1.0",
+        "mongoose": "^5.9.18",
         "uuid": "^8.1.0"
     },
     "devDependencies": {
         "nodemon": "^1.19.2"
     },
-    "scripts":{
-        "start":"nodemon"
+    "scripts": {
+        "start": "nodemon"
     }
 }
