--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "express-handlebars": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.9.18",
+        "node-fetch": "^2.6.0",
         "uuid": "^8.1.0"
     },
     "devDependencies": {
